// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useTransition > no extra commit with useTransition (#1125) 1`] = `
<DocumentFragment>
  loading
</DocumentFragment>
`;

exports[`useTransition > no extra commit with useTransition (#1125) 2`] = `
<DocumentFragment>
  <div>
    delayed: 0
  </div>
  <div />
  <button>
    button
  </button>
</DocumentFragment>
`;

exports[`useTransition > no extra commit with useTransition (#1125) 3`] = `
<DocumentFragment>
  <div>
    delayed: 0
  </div>
  <div>
    pending
  </div>
  <button>
    button
  </button>
</DocumentFragment>
`;

exports[`useTransition > no extra commit with useTransition (#1125) 4`] = `
<DocumentFragment>
  <div>
    delayed: 1
  </div>
  <div />
  <button>
    button
  </button>
</DocumentFragment>
`;
